--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           </div>
 
           <div class="note">
-            Tip: putem înlocui formularul cu Google Forms sau cu un formular real care salvează lead-urile în sistem.
+            Pe viitor formular Google Forms.
           </div>
         </form>
       </div>
@@ -323,4 +323,5 @@
     document.getElementById("y").textContent = new Date().getFullYear();
   </script>
 </body>
+
 </html>
