--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
   <div class="wrap">
     <div class="nav">
       <a class="brand" href="#top" aria-label="DocFlowAI">
-        <div class="logo" aria-hidden="true"></div>
-        <div><b>DocFlowAI</b><div class="muted" style="font-size:12px;margin-top:-2px;">Fluxuri inteligente de documente</div></div>
+        <img src="/Logo.png" alt="DocFlowAI" style="height:56px;width:auto;object-fit:contain;" />
       </a>
       <div class="pillbar">
         <a class="pill" href="#produs">Produs</a>
@@ -220,6 +219,11 @@
               <li class="li"><b>Audit & istoric</b> (cine / ce / când)</li>
               <li class="li"><b>Export PDF final</b> + versiuni controlate</li>
             </ul>
+            <div style="margin-top:14px;">
+              <a href="/login" class="btn primary" style="text-decoration:none;display:inline-flex;align-items:center;gap:8px;padding:11px 20px;border-radius:14px;background:linear-gradient(135deg,#7c5cff,#2dd4bf);color:#fff;font-weight:700;border:none;">
+                🚀 Intră în aplicație
+              </a>
+            </div>
           </div>
           <div>
             <div class="tag">✨ AI Assistant</div>
@@ -304,7 +308,7 @@
           </div>
 
           <div class="note">
-            Pe viitor formular Google Forms.
+            Tip: putem înlocui formularul cu Google Forms sau cu un formular real care salvează lead-urile în sistem.
           </div>
         </form>
       </div>
@@ -314,14 +318,6 @@
       <div class="muted">© <span id="y"></span> DocFlowAI. Toate drepturile rezervate.</div>
       <div class="footLinks">
         <span class="muted">Contact:</span>
-        <a class="muted" href="mailto:hello@docflowai.ro">hello@docflowai.ro</a>
+        <a class="muted" href="/cdn-cgi/l/email-protection#630b060f0f0c23070c00050f0c14020a4d110c"><span class="__cf_email__" data-cfemail="8ae2efe6e6e5caeee5e9ece6e5fdebe3a4f8e5">[email&#160;protected]</span></a>
       </div>
-    </div>
-  </div>
-
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
-</body>
-
-</html>
+    </
