--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <li class="li"><b>Export PDF final</b> + versiuni controlate</li>
             </ul>
             <div style="margin-top:14px;">
-              <a href="/login" class="btn primary" style="text-decoration:none;display:inline-flex;align-items:center;gap:8px;padding:11px 20px;border-radius:14px;background:linear-gradient(135deg,#7c5cff,#2dd4bf);color:#fff;font-weight:700;border:none;">
+              <a href="https://app.docflowai.ro/login" class="btn primary" style="text-decoration:none;display:inline-flex;align-items:center;gap:8px;padding:11px 20px;border-radius:14px;background:linear-gradient(135deg,#7c5cff,#2dd4bf);color:#fff;font-weight:700;border:none;">
                 🚀 Intră în aplicație
               </a>
             </div>
