--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="pillbar">
         <a class="pill" href="#produs">Produs</a>
         <a class="pill" href="#verticale">Verticale</a>
-        <a class="pill" href="#demo">Solicită demo</a>
+        <a class="pill" href="#implementare">Solicită implementare</a>
       </div>
     </div>
 
@@ -169,7 +169,7 @@
         </p>
 
         <div class="ctaRow">
-          <a class="btn primary" href="#demo">Solicită demo</a>
+          <a class="btn primary" href="#implementare">Solicită implementare</a>
           <a class="btn" href="#verticale">Vezi verticale</a>
           <a class="btn" href="#produs">Cum funcționează</a>
         </div>
@@ -263,9 +263,9 @@
       </div>
     </div>
 
-    <div id="demo" class="section">
+    <div id="implementare" class="section">
       <div class="card">
-        <h2>Solicită demo</h2>
+        <h2>Solicită implementare</h2>
         <p class="lead" style="margin-top:0">
           Lasă datele și îți trimitem un demo (pilot) + întrebări rapide ca să configurăm fluxul potrivit.
         </p>
@@ -276,7 +276,7 @@
           2) Sau pui un mailto (default aici)
           3) Sau conectăm ulterior la un endpoint (SaaS)
         -->
-        <form action="mailto:hello@docflowai.ro" method="post" enctype="text/plain">
+        <form action="mailto:administrator@docflowai.ro" method="post" enctype="text/plain">
           <div class="row">
             <div>
               <label>Nume</label>
@@ -318,6 +318,6 @@
       <div class="muted">© <span id="y"></span> DocFlowAI. Toate drepturile rezervate.</div>
       <div class="footLinks">
         <span class="muted">Contact:</span>
-        <a class="muted" href="/cdn-cgi/l/email-protection#630b060f0f0c23070c00050f0c14020a4d110c"><span class="__cf_email__" data-cfemail="8ae2efe6e6e5caeee5e9ece6e5fdebe3a4f8e5">[email&#160;protected]</span></a>
+        <a class="muted" href="mailto:administrator@docflowai.ro">administrator@docflowai.ro</a>
       </div>
     </
